--- a/SimplestKeypad/SimplestKeypad.Droid/Resources/layout/Toolbar.axml
+++ b/SimplestKeypad/SimplestKeypad.Droid/Resources/layout/Toolbar.axml
@@ -1,3 +1,4 @@
+
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
@@ -5,5 +6,8 @@
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    android:isScrollContainer="false"
+    android:scrollbarAlwaysDrawHorizontalTrack="false"
+    android:scrollbarAlwaysDrawVerticalTrack="false" />
 
